--- a/StuCppSecond/StuCppSecond.vcxproj.filters
+++ b/StuCppSecond/StuCppSecond.vcxproj.filters
@@ -36,6 +36,9 @@
     <ClCompile Include="MyArrays.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="main03.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="ComplexTest.h">
