--- a/StuCppSecond/StuCppSecond.vcxproj
+++ b/StuCppSecond/StuCppSecond.vcxproj
@@ -151,6 +151,7 @@
     <ClCompile Include="classtemplate02.cpp" />
     <ClCompile Include="ComplexTest.hpp" />
     <ClCompile Include="funtemplate.cpp" />
+    <ClCompile Include="main03.cpp" />
     <ClCompile Include="mainarray.cpp" />
     <ClCompile Include="MyArrays.cpp" />
   </ItemGroup>
