--- a/StuCppSecond/StuCppSecond.vcxproj.filters
+++ b/StuCppSecond/StuCppSecond.vcxproj.filters
@@ -51,6 +51,12 @@
     <ClCompile Include="main05.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="main06.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="main07.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="ComplexTest.h">
