--- a/StuCppSecond/StuCppSecond.vcxproj
+++ b/StuCppSecond/StuCppSecond.vcxproj
@@ -154,6 +154,8 @@
     <ClCompile Include="main03.cpp" />
     <ClCompile Include="main04.cpp" />
     <ClCompile Include="main05.cpp" />
+    <ClCompile Include="main06.cpp" />
+    <ClCompile Include="main07.cpp" />
     <ClCompile Include="mainarray.cpp" />
     <ClCompile Include="MyArrays.cpp" />
     <ClCompile Include="MyException.cpp" />
