仿函数,一元函数对象,一元谓词

--- a/StuCppSecond/StuCppSecond.vcxproj
+++ b/StuCppSecond/StuCppSecond.vcxproj
@@ -156,6 +156,7 @@
     <ClCompile Include="main05.cpp" />
     <ClCompile Include="main06.cpp" />
     <ClCompile Include="main07.cpp" />
+    <ClCompile Include="main08.cpp" />
     <ClCompile Include="mainarray.cpp" />
     <ClCompile Include="MyArrays.cpp" />
     <ClCompile Include="MyException.cpp" />
