--- a/StuCppSecond/StuCppSecond.vcxproj.filters
+++ b/StuCppSecond/StuCppSecond.vcxproj.filters
@@ -60,6 +60,9 @@
     <ClCompile Include="main08.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="main09.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="ComplexTest.h">
