--- a/StuCppSecond/StuCppSecond.vcxproj.filters
+++ b/StuCppSecond/StuCppSecond.vcxproj.filters
@@ -63,6 +63,9 @@
     <ClCompile Include="main09.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="main010.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="ComplexTest.h">
