--- a/StuCppThree/StuCppThree.vcxproj
+++ b/StuCppThree/StuCppThree.vcxproj
@@ -148,15 +148,18 @@
   <ItemGroup>
     <ClCompile Include="circleLinkedList.c" />
     <ClCompile Include="CppLinkedList.cpp" />
+    <ClCompile Include="dlinkedList.c" />
     <ClCompile Include="linklist.c" />
     <ClCompile Include="main01.c" />
     <ClCompile Include="main02.c" />
     <ClCompile Include="main03.cpp" />
+    <ClCompile Include="main04.c" />
     <ClCompile Include="seqList.c" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="circleLinkedList.h" />
     <ClInclude Include="CppLinkedList.h" />
+    <ClInclude Include="dlinkedList.h" />
     <ClInclude Include="linklist.h" />
     <ClInclude Include="seqList.h" />
   </ItemGroup>
