--- a/StuCppThree/StuCppThree.vcxproj
+++ b/StuCppThree/StuCppThree.vcxproj
@@ -150,11 +150,13 @@
     <ClCompile Include="CppLinkedList.cpp" />
     <ClCompile Include="dlinkedList.c" />
     <ClCompile Include="linklist.c" />
+    <ClCompile Include="linkstack.c" />
     <ClCompile Include="main01.c" />
     <ClCompile Include="main02.c" />
     <ClCompile Include="main03.cpp" />
     <ClCompile Include="main04.c" />
     <ClCompile Include="main05.c" />
+    <ClCompile Include="main06.cpp" />
     <ClCompile Include="seqList.c" />
     <ClCompile Include="seqStack.c" />
   </ItemGroup>
@@ -163,6 +165,7 @@
     <ClInclude Include="CppLinkedList.h" />
     <ClInclude Include="dlinkedList.h" />
     <ClInclude Include="linklist.h" />
+    <ClInclude Include="linkstack.h" />
     <ClInclude Include="seqList.h" />
     <ClInclude Include="seqStack.h" />
   </ItemGroup>
