--- a/StuCppThree/StuCppThree.vcxproj.filters
+++ b/StuCppThree/StuCppThree.vcxproj.filters
@@ -72,6 +72,12 @@
     <ClCompile Include="CppSeqList.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="main010.c">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="main011.c">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="seqList.h">
